Fixed pagination
* Split pagination into three partials: post pagination, site pagination and comment pagination.
* Updated pagination calls to be for a specific pagination partial.
* Removed one line of unused CSS.
* Fixed flex layout bug in pagination links.
* Added classes to all pagination link items.

--- a/assets/css/components/_navigation.scss
+++ b/assets/css/components/_navigation.scss
@@ -31,9 +31,13 @@ nav#gohome {
  * There is pagination for both individual posts and for the site itself.
  */
 
-nav#pagination {
+.pagination {
     @include margin(3 0);
-    @include columns(flex, p, 3, 0);
+    @include flex-parent(row, space-between, wrap);
+
+    p {
+        @include flex-child(1);
+    }
 
     span {
         color: palette(black);
@@ -52,7 +56,7 @@ nav#pagination {
         }
     }
 
-    p[class^=next] {
+    p.next {
         text-align: right;  
     }
 
@@ -61,8 +65,4 @@ nav#pagination {
             white-space: normal;
         }
     }
-}
-
-.nav-box-shadow {
-    box-shadow: 0px -5px 39px -17px rgba(0,0,0,0.95);
 }
